--- a/Window_Web_STU/Window_Web_STU.vcxproj
+++ b/Window_Web_STU/Window_Web_STU.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="Function.cpp" />
     <ClCompile Include="Main_Client.cpp" />
     <ClCompile Include="TCP_client.cpp" />
+    <ClCompile Include="Test.cpp" />
     <ClCompile Include="UDP_client.cpp" />
   </ItemGroup>
   <ItemGroup>
