--- a/Window_Web_STU/Window_Web_STU.vcxproj.filters
+++ b/Window_Web_STU/Window_Web_STU.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Function.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Test.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Function.h">
